--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,9 @@
     },
     "rules": {
         "no-console": 0,
-        "camelcase": 0
+        "camelcase": 0,
+        "no-multi-spaces": ["error", { "ignoreEOLComments": true }],
+        "no-cond-assign": ["error", "except-parens"],
+        "no-return-assign": ["error", "except-parens"]
     }
 }
