--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
         "camelcase": 0,
         "no-multi-spaces": ["error", { "ignoreEOLComments": true }],
         "no-cond-assign": ["error", "except-parens"],
-        "no-return-assign": ["error", "except-parens"]
+        "no-return-assign": ["error", "except-parens"],
+        "class-methods-use-this": 0,
+        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }]
     }
 }
